--- a/README
+++ b/README
@@ -1,3 +1,4 @@
 Primo plugins are hooks into Primo to extend functionality.  Currently
-we only have a skeleton for plugins since we're waiting for the latest 
-Primo API JARs to be installed via the next Primo service pack.
+we only one Primo enrichment plugin built that includes OCLC IDs into the 
+Primo document based on a mapping of Aleph bibliographic
+system numbers (BSNs) from the NYU Libraries' Aleph DataWarehouse.
