--- a/README
+++ b/README
@@ -1,4 +1,12 @@
 Primo plugins are hooks into Primo to extend functionality.  Currently
-we only one Primo enrichment plugin built that includes OCLC IDs into the 
-Primo document based on a mapping of Aleph bibliographic
+we have only one Primo enrichment plugin built that adds OCLC IDs into
+the Primo document based on a mapping of Aleph bibliographic
 system numbers (BSNs) from the NYU Libraries' Aleph DataWarehouse.
+
+In order to build a jar, you must first configure the
+META-INF/datawarehouse.properties file.  A sample 
+properties files is included at META-INF/datawarehouse.properties.tml.
+After configuring the DataWarehouse properties you can then run ant to
+create the jar. 
+  shell$ ant
+Your jar is now in the dist directory.
